--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,8 +8,10 @@
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+  /* --font-sans: var(--font-geist-sans);
+  --font-mono: var(--font-geist-mono); */
+  --font-sans: var(--font-lorin);
+  --font-mono: var(--font-lorin);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -22,5 +24,24 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Lorin, sans-serif;
+}
+
+@theme {
+  --font-display: "Lorin", "sans-serif";
+  --font-body: "Lorin", "serif";
+  --color-red: #ba0e0e;
+  --color-orange: #ef930a;
+  --color-green: #0ccb2a;
+}
+
+@layer utilities {
+  .bg-hero-main-gradient {
+    background: linear-gradient(
+      180deg,
+      #2a0a9a 5.07%,
+      #804ebd 62.52%,
+      #d2a6ca 123.75%
+    );
+  }
 }
