--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -7,7 +7,7 @@
 
 @font-face {
   font-family: "Lorin";
-  src: url("/fonts/LLorin-Bold.woff2") format("woff2");
+  src: url("/fonts/Lorin-Bold.woff2") format("woff2");
   font-weight: 700;
   font-style: normal;
 }
